@@ -88,7 +88,7 @@ public class JobSourceSetTest {
     @Test
     public void testFilterIncludesFormat() {
         jobSourceSet.addConfiguredIncludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("dita")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("dita")), null, null, null, null)
         );
         assertTrue(jobSourceSet.filter(job.getFileInfo(URI.create("a.dita"))));
         assertFalse(jobSourceSet.filter(job.getFileInfo(URI.create("a.ditamap"))));
@@ -98,10 +98,10 @@ public class JobSourceSetTest {
     @Test
     public void testFilterIncludesMultipleFormat() {
         jobSourceSet.addConfiguredIncludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("dita")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("dita")), null, null, null, null)
         );
         jobSourceSet.addConfiguredIncludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("ditamap")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("ditamap")), null, null, null, null)
         );
         assertTrue(jobSourceSet.filter(job.getFileInfo(URI.create("a.dita"))));
         assertTrue(jobSourceSet.filter(job.getFileInfo(URI.create("a.ditamap"))));
@@ -111,7 +111,7 @@ public class JobSourceSetTest {
     @Test
     public void testFilterExcludesFormat() {
         jobSourceSet.addConfiguredExcludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("dita")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("dita")), null, null, null, null)
         );
         assertFalse(jobSourceSet.filter(job.getFileInfo(URI.create("a.dita"))));
         assertTrue(jobSourceSet.filter(job.getFileInfo(URI.create("a.ditamap"))));
@@ -121,10 +121,10 @@ public class JobSourceSetTest {
     @Test
     public void testFilterExcludesMultipleFormat() {
         jobSourceSet.addConfiguredExcludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("dita")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("dita")), null, null, null, null)
         );
         jobSourceSet.addConfiguredExcludes(
-                new SelectorElem(new HashSet<>(Arrays.asList("ditamap")), null, null, null, null)
+                new SelectorElem(new HashSet<>(List.of("ditamap")), null, null, null, null)
         );
         assertFalse(jobSourceSet.filter(job.getFileInfo(URI.create("a.dita"))));
         assertFalse(jobSourceSet.filter(job.getFileInfo(URI.create("a.ditamap"))));
